--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "table:create": "ts-node src/commands/create-table.ts",
+    "table:drop": "ts-node src/commands/drop-table.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.33",
+    "@types/sqlite3": "^3.1.8",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
