--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "app:start": "npx webpack",
+
+    "server:start": "nodemon --ignore 'app/*.ts' src/index.ts",
+
     "table:create": "ts-node src/commands/create-table.ts",
     "table:drop": "ts-node src/commands/drop-table.ts",
     "table:seed": "ts-node src/commands/seed-table.ts"
@@ -21,7 +24,10 @@
     "@types/node": "^17.0.33",
     "@types/sqlite3": "^3.1.8",
     "nodemon": "^2.0.16",
+    "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
