--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "app:start": "npx webpack",
-
     "server:start": "nodemon --ignore 'app/*.ts' src/index.ts",
-
     "table:create": "ts-node src/commands/create-table.ts",
     "table:drop": "ts-node src/commands/drop-table.ts",
     "table:seed": "ts-node src/commands/seed-table.ts"
@@ -17,14 +15,24 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "sqlite3": "^5.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.0",
+    "@babel/plugin-transform-runtime": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@babel/runtime": "^7.18.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/sqlite3": "^3.1.8",
+    "babel-loader": "^8.2.5",
     "nodemon": "^2.0.16",
-    "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
